adding Search an Event Section

--- a/index.html
+++ b/index.html
@@ -33,14 +33,34 @@
                 <h2>SBS MTV The Kpop Show Ticket  Package.</h2>
                 <p>Look no further! Our SBS The Show tickets are the simplest way for you to experience a live Kpop recording.</p>
                 <div class="buttons">
-                    <ul>
-                        <li><a class="left-btn" href="">Get Ticket</a></li>
-                        <li><a class="right-btn" href="">Learn More</a></li>
-                    </ul>
+                    <button class="left-btn"><a href="">Get Ticket</a></button>
+                    <button class="right-btn"><a href="">Learn More</a></button>
                 </div>
             </div>
         </section>
     </header>
+    <!-- Search an Event Section -->
+    <section class="event-section">
+        <div class="search-events">
+            <form>
+                <label for="event-search">Search Event</label>
+                <input type="search" id="event-search" name="gsearch" placeholder="Konser Jazz">
+              </form>
+        </div>
+        <div class="place">
+            <form>
+                <label for="search-place">Place</label>
+                <input type="search" id="search-place" name="search-place" placeholder="Indonesia">
+            </form>
+        </div>
+        <div class="time">
+            <form>
+                <label for="search-place">Time</label>
+                <input type="search" id="search-place" name="search-place" placeholder="Any day">
+            </form>
+        </div>
+    </section>
+
 
     <img src="captures d'écran des maquettes/Page d'acceuil.png" alt="" style="width: 100%;">
     
