--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Speakers</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a class="login-btn" href="#">Login</a></li>
+                        <li><a class="login-btn" href="login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,9 +60,240 @@
             </form>
         </div>
     </section>
+    <!-- main section -->
+     <main class="main-section">
+        <section class="upcoming-header">
+            <h1>Upcoming Events</h1>
+            <div class="selection">
+                <select name="weekdays" id="weekdays">
+                    <option value="">Weekdays</option>
+                    <option value="">Monday</option>
+                    <option value="">Tuesday</option>
+                    <option value="">Wednesday</option>
+                    <option value="">Thursday</option>
+                    <option value="">Friday</option>
+                    <option value="">Saturday</option>
+                    <option value="">Sunday</option>
+                </select>
+                <select name="event-type" id="event-type">
+                    <option value="">Event Type</option>
+                    <option value="">Music Concerts</option>
+                    <option value="">Theatre Plays</option>
+                    <option value="">Art Exhibitions</option>
+                    <option value="">Film Festivals</option>
+                    <option value="">Stand-up Comedy Shows</option>
+                </select>
+                <select name="any-category" id="any-category">
+                    <option value="">Any Category</option>
+                    <option value="">Monday</option>
+                    <option value="">Tuesday</option>
+                    <option value="">Wednesday</option>
+                    <option value="">Thursday</option>
+                    <option value="">Friday</option>
+                    <option value="">Saturday</option>
+                    <option value="">Sunday</option>
+                </select>
+            </div>
+        </section>
+        <section class="upcoming-main">
+            <div class="first-line">
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-1.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-2.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-3.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="second-line">
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-4.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-5.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="card-img">
+                        <img src="images/img-6.png" alt="concert">
+                    </div>
+                    <div class="card-info">
+                        <div class="event-date">
+                            <div class="event-month">APR</div>
+                            <div class="event-day">14</div>
+                        </div>
+                        <div class="event-details">
+                            <H3>Wonder Girls 2010 Wonder Girls World Tour San Francisco</H3>
+                            <p>We’ll get you directly seated and inside for you to enjoy the show.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="load-more-btn">
+                <button id="load-more-btn"><a href="#">Load More</a></button>
+            </div>
+        </section>
+     </main>
+     <section class="brands">
+        <div class="join-section">
+            <H2>Join these brands</H2>
+            <H4>We've had the pleasure of working with industry-defining brands. These <br>are just some of them.</H4>
+        </div>
+        <div class="brands-icons">
+            <img src="images/spotify.png" alt="spotify-icon">
+            <img src="images/google.png" alt="google-icon">
+            <img src="images/stripe.png" alt="stripe-icon">
+            <img src="images/youtube.png" alt="youtube-icon">
+            <img src="images/microsoft.png" alt="microsoft-icon">
+        </div>
+     </section>
+     <section class="blog-section">
+        <div class="blog-section-head">
+            <H2>Blog</H2>
+            <H4>Here You can find the energy you want to Hangout with friends</H4>
+        </div>
+     </section>
+     <div class="blog">
+        <div class="blog-card">
+            <div class="card-img">
+                <img src="images/blog-1.png" alt="concert">
+            </div>
+            <div class="card-info">
+                <div class="card-details">
+                    <h2>6 Strategies to Find Your Conference Keynote and Other Speakers</h2>
+                    <h4>12 Mar - Jhon Doe</h4>
+                </div>
+            </div>
+        </div>
+        <div class="blog-card">
+            <div class="card-img">
+                <img src="images/blog-2.png" alt="concert">
+            </div>
+            <div class="card-info">
+                <div class="card-details">
+                    <h2>How Successfully Used Paid Marketing to Drive Incremental Ticket Sales</h2>
+                    <h4>12 Mar - Jhon Doe</h4>
+                </div>
+            </div>
+        </div>
+        <div class="blog-card">
+            <div class="card-img">
+                <img src="images/blog-3.png" alt="concert">
+            </div>
+            <div class="card-info">
+                <div class="card-details">
+                    <h2>Introducing Workspaces: Work smarter, not harder with new navigation</h2>
+                    <h4>12 Mar - Jhon Doe</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="about">
+                <div class="logo">
+                    <img src="images/logo1.png" alt="Eventick-logo">
+                </div>
+                <p>Eventick is a global self-service ticketing platform for live experiences that allows anyone to create, share, 
+                    find and attend events that fuel their passions and enrich their lives.
+                </p>
+            </div>
+            <div class="plan-events">
+                <h2>Plan Events</h2>
+                <div><a href="#">Create and Set up</a></div>
+                <div><a href="#">Sell Tickets</a></div>
+                <div><a href="#">Online RSVB</a></div>
+                <div><a href="#">Online Events</a></div>
+            </div>
+            <div class="footer-back-menu">
+                <h2>Eventick</h2>
+                <div><a href="#">About Us</a></div>
+                <div><a href="#">Press</a></div>
+                <div><a href="#">Contact Us</a></div>
+                <div><a href="#">How It works</a></div>
+                <div><a href="#">Privacy</a></div>
+                <div><a href="#">Terms</a></div>
+            </div>
+            <div class="newsletter">
+                <h2>Stay in The Loop</h2>
+                <p>Join Our mailing list to stay in the loop with our newest for Event and Concert</p>
+                <div class="mailfield">
+                    <input type="email" id="mail" placeholder="Enter your e-mail adress">
+                    <button><a href="#">Subscribe Now</a></button>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="copyright">
+            <h4>copyright &copy dadssi</h4>
+        </div>
+        <!-- <h4>copyryght &copy dadssi</h4> -->
+    </footer>
+     
 
 
-    <img src="captures d'écran des maquettes/Page d'acceuil.png" alt="" style="width: 100%;">
+    <!-- <img src="captures d'écran des maquettes/Page d'acceuil.png" alt="" style="width: 100%;"> -->
     
 </body>
 <script src="https://kit.fontawesome.com/8dd174d5fa.js" crossorigin="anonymous"></script>
