adding social icons to footer section

--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
                 <p>Eventick is a global self-service ticketing platform for live experiences that allows anyone to create, share, 
                     find and attend events that fuel their passions and enrich their lives.
                 </p>
+                <div class="social-icons">
+                    <img src="images/fb-icon.png" alt="facebook icon">
+                    <img src="images/twitter-icon.png" alt="twitter icon">
+                    <img src="images/linkedin-icon.png" alt="linkedin icon">
+                </div>
             </div>
             <div class="plan-events">
                 <h2>Plan Events</h2>
