finalisation de la page de Login (HTML et CSS

--- a/login.html
+++ b/login.html
@@ -46,11 +46,29 @@
     <section class="login-section">
         <h1>Welcome</h1>
     </section>
+
     <!-- main login section -->
+     <div class="login-bg">
+        <section class="main-login-section">
+            <h1>Login</h1>
+            <input type="email" required placeholder="Your e-mail">
+            <input type="password" required placeholder="**********">
+            <button class="continue-button">Continue</button>
+            <H3>Or Connect with</H3>
+            <div class="twitter">
+                <img src="images/twitter-icon.png" alt="twitter-icon">
+                <span>Sign in with Twitter</span>
+            </div>
+            <div class="facebook">
+                <img src="images/fb-icon.png" alt="twitter-icon">
+                <span>Sign in with Facebook</span>
+            </div>
+     </section>
+     </div>
     
 
 
-    <img style="width:100%" src="captures d'écran des maquettes/Page Login.png" alt="">
+    <!-- <img style="width:100%" src="captures d'écran des maquettes/Page Login.png" alt=""> -->
     <footer>
         <div class="footer-container">
             <div class="about">
