finalisation de la page speakers HTML et CSS

--- a/speakers.html
+++ b/speakers.html
@@ -67,21 +67,21 @@
                 <div class="speaker-card">
                     <img src="images/jason-statham.png" alt="jason-statham">
                     <div class="speaker-info">
-                        <h2>Jason Statham</h2>
+                        <span>Jason Statham</span>
                         <p>Super Start of Cinema<br>@Hollywood</p>
                     </div>
                 </div>
                 <div class="speaker-card">
                     <img src="images/dadssi.jpg" alt="dadssi">
                     <div class="speaker-info">
-                        <h2>Dadssi Mohamed</h2>
+                        <span>Dadssi Mohamed</span>
                         <p>Web Developer Student<br>@Youcode</p>
                     </div>
                 </div>
                 <div class="speaker-card">
                     <img src="images/Marie laurane.png" alt="marie-laurane">
                     <div class="speaker-info">
-                        <h2>Marie Laurane</h2>
+                        <span>Marie Laurane</span>
                         <p>Journalist <br>@NewYork Times</p>
                     </div>
                 </div>
@@ -90,26 +90,42 @@
                 <div class="speaker-card">
                     <img src="images/tom-cruise.png" alt="Tom Cruise">
                     <div class="speaker-info">
-                        <h2>Tom Cruise</h2>
+                        <span>Tom Cruise</span>
                         <p>Super Start of Cinema<br>@Hollywood</p>
                     </div>
                 </div>
                 <div class="speaker-card">
                     <img src="images/benjamain.png" alt="Benjamain">
                     <div class="speaker-info">
-                        <h2>Benjamain</h2>
+                        <span>Benjamain</span>
                         <p>Business Man<br>@Dj World</p>
                     </div>
                 </div>
                 <div class="speaker-card">
                     <img src="images/John week.png" alt="">
                     <div class="speaker-info">
-                        <h2>John Week</h2>
+                        <span>John Week</span>
                         <p>Baptizer of Jazz<br>@Hard Rock</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="load-more-btn">
+            <button id="load-more-btn"><a href="#">Load More</a></button>
+        </div>
+        <section class="brands">
+            <div class="join-section">
+                <H2>Join these brands</H2>
+                <H4>We've had the pleasure of working with industry-defining brands. These <br>are just some of them.</H4>
+            </div>
+            <div class="brands-icons">
+                <img src="images/spotify.png" alt="spotify-icon">
+                <img src="images/google.png" alt="google-icon">
+                <img src="images/stripe.png" alt="stripe-icon">
+                <img src="images/youtube.png" alt="youtube-icon">
+                <img src="images/microsoft.png" alt="microsoft-icon">
+            </div>
+         </section>
      </main>
     <footer>
         <div class="footer-container">
