la finalisation de la page about

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
-    <title>Speakers page</title>
+    <title>About page</title>
 </head>
 <body>
     <!-- Header Section  -->
@@ -40,77 +40,56 @@
             </div>
         </section>
     </header>
-    <!-- Speakers Section -->
+    <!-- Search an Event Section -->
     <section class="login-section">
-        <h1 id="login-page">Speakers</h1>
+        <h1 id="login-page">About Us</h1>
     </section>
     <!-- main section -->
-     <main>
-        <div class="speakers">
-            <div class="first-line">
-                <div class="speaker-card">
-                    <img src="images/jason-statham.png" alt="jason-statham">
-                    <div class="speaker-info">
-                        <span>Jason Statham</span>
-                        <p>Super Start of Cinema<br>@Hollywood</p>
-                    </div>
-                </div>
-                <div class="speaker-card">
-                    <img src="images/dadssi.jpg" alt="dadssi">
-                    <div class="speaker-info">
-                        <span>Dadssi Mohamed</span>
-                        <p>Web Developer Student<br>@Youcode</p>
-                    </div>
-                </div>
-                <div class="speaker-card">
-                    <img src="images/Marie laurane.png" alt="marie-laurane">
-                    <div class="speaker-info">
-                        <span>Marie Laurane</span>
-                        <p>Journalist <br>@NewYork Times</p>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="text">
+                <h2>Our Mission</h2>
+                <p>At Eventick, our mission is simple: to make event creation and participation effortless, accessible, 
+                    and impactful. We are passionate about connecting people through shared experiences. By empowering 
+                    individuals and organizations to create, share, and attend events, we aim to ignite passions and enhance 
+                    lives. Whether it’s a concert, conference, workshop, or festival, we provide the tools and technology to bring 
+                    people together.
+                </p>
             </div>
-            <div class="second-line">
-                <div class="speaker-card">
-                    <img src="images/tom-cruise.png" alt="Tom Cruise">
-                    <div class="speaker-info">
-                        <span>Tom Cruise</span>
-                        <p>Super Start of Cinema<br>@Hollywood</p>
-                    </div>
-                </div>
-                <div class="speaker-card">
-                    <img src="images/benjamain.png" alt="Benjamain">
-                    <div class="speaker-info">
-                        <span>Benjamain</span>
-                        <p>Business Man<br>@Dj World</p>
-                    </div>
-                </div>
-                <div class="speaker-card">
-                    <img src="images/John week.png" alt="">
-                    <div class="speaker-info">
-                        <span>John Week</span>
-                        <p>Baptizer of Jazz<br>@Hard Rock</p>
-                    </div>
-                </div>
+            <div class="image">
+                <img id="ticket" src="images/event-ticket.jpg" alt="Image 1">
             </div>
         </div>
-        <div class="load-more-btn">
-            <button id="load-more-btn"><a href="#">Load More</a></button>
+        
+        <div class="row">
+            <div class="image">
+                <img id="creators" src="images/event-creators.jpg" alt="Image 2">
+            </div>
+            <div class="text">
+                <h2>How We Support Event Creators</h2>
+                <p>From the initial spark of an event idea to the moment attendees walk through the doors, Eventick is there 
+                    every step of the way. We offer a seamless experience for event organizers, ensuring that every detail is 
+                    taken care of. Our platform makes it easy to manage event promotion, registration, and ticketing, allowing 
+                    creators to focus on what truly matters: delivering unforgettable experiences.
+                </p>
+            </div>
         </div>
-        <section class="brands">
-            <div class="join-section">
-                <H2>Join these brands</H2>
-                <H4>We've had the pleasure of working with industry-defining brands. These <br>are just some of them.</H4>
+        
+        <div class="row">
+            <div class="text">
+                <h2>Bringing Communities Together</h2>
+                <p>We believe that live events have the power to inspire, educate, and unite communities. 
+                    At Eventick, the world is your stage—whether you're an event organizer looking to share your 
+                    passion or an attendee seeking memorable moments. Join us in creating events that leave a lasting 
+                    impact and memories that stand the test of time.
+                </p>
             </div>
-            <div class="brands-icons">
-                <img src="images/spotify.png" alt="spotify-icon">
-                <img src="images/google.png" alt="google-icon">
-                <img src="images/stripe.png" alt="stripe-icon">
-                <img src="images/youtube.png" alt="youtube-icon">
-                <img src="images/microsoft.png" alt="microsoft-icon">
+            <div class="image">
+                <img id="gnawa" src="images/gnawa-festival.jpg" alt="Image 3">
             </div>
-         </section>
-     </main>
+        </div>
+    </div>
+    <!-- Section Footer -->
     <footer>
         <div class="footer-container">
             <div class="about">
