--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
-    <title>Home page</title>
+    <title>Login page</title>
 </head>
 <body class="loginpage-body">
     <!-- Header Section  -->
@@ -19,9 +19,9 @@
             <div class="menu">
                 <div class="links">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Speakers</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="speakers.html">Speakers</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a class="login-btn" href="login.html">Login</a></li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
     </header>
     <!-- Login Section -->
     <section class="login-section">
-        <h1>Welcome</h1>
+        <h1 id="login-page">Welcome</h1>
     </section>
 
     <!-- main login section -->
@@ -53,22 +53,18 @@
             <h1>Login</h1>
             <input type="email" required placeholder="Your e-mail">
             <input type="password" required placeholder="**********">
-            <button class="continue-button">Continue</button>
+            <button class="continue-button"><a href="#">Continue</a></button>
             <H3>Or Connect with</H3>
             <div class="twitter">
                 <img src="images/twitter-icon.png" alt="twitter-icon">
-                <span>Sign in with Twitter</span>
+                <span><a href="">Sign in with Twitter</a></span>
             </div>
             <div class="facebook">
                 <img src="images/fb-icon.png" alt="twitter-icon">
-                <span>Sign in with Facebook</span>
+                <span><a href="">Sign in with Facebook</a></span>
             </div>
      </section>
      </div>
-    
-
-
-    <!-- <img style="width:100%" src="captures d'écran des maquettes/Page Login.png" alt=""> -->
     <footer>
         <div class="footer-container">
             <div class="about">
