--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <div class="links">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Speakers</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a class="login-btn" href="login.html">Login</a></li>
+                        <li><a href="speakers.html">Speakers</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a class="login-btn" href="login.html#login-page">Login</a></li>
                     </ul>
                 </div>
             </div>
