working on 415px devices design

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>About page</title>
 </head>
 <body>
@@ -40,6 +41,18 @@
             </div>
         </section>
     </header>
+
+    <!-- header for mobile -->
+
+    <div class="header-phone">
+        <div class="navbar">
+            <img src="images/logo1.png" alt="Eventick-logo">
+            <span class="menu-icon">menu</span>
+        </div>
+        <div class="hero">
+            <img src="" alt="">
+        </div>
+    </div>
     <!-- Search an Event Section -->
     <section class="login-section">
         <h1 id="login-page">About Us</h1>
