essai de dropdown menu pour les mobile mais sans resultat :(

--- a/about.html
+++ b/about.html
@@ -44,13 +44,24 @@
 
     <!-- header for mobile -->
 
+
     <div class="header-phone">
         <div class="navbar">
-            <img src="images/logo1.png" alt="Eventick-logo">
-            <span class="menu-icon">menu</span>
+            <img src="images/logo1.png" alt="Eventick-logo" id="logo">
+            <!-- <span class="material-symbols-outlined">menu</span> -->
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle"><img class="menu-icon" src="images/mobile-photos/burger-menu.png" alt=""></label>
+        </div>
+        <div class="drop-down-menu">
+            <!-- <div class="dropdown-menu"> -->
+            <div class="menu menu1"><h2><a href="" class="menu-link">MENU</a></h2></div>
+            <div class="menu menu2"><h2><a href="" class="menu-link">Home</a></h2></div>
+            <div class="menu menu3"><h2><a href="" class="menu-link">Speakers</a></h2></div>
+            <div class="menu menu4"><h2><a href="" class="menu-link">About</a></h2></div>
+            <div class="menu menu5"><h2><a href="" class="menu-link">Login</a></h2></div>
         </div>
         <div class="hero">
-            <img src="" alt="">
+            <!-- <img src="images/mobile-photos/hero-bg.jpg" alt=""> -->
         </div>
     </div>
     <!-- Search an Event Section -->
